# solaredge-web

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
src/solaredge_web/: __init__.py  solaredge.py
tests/: __init__.py  test_api.py
